fixes various Findbugs warnings